Fixed vertically aligned ka-Buttons in firefox

--- a/media/admin/css/ka/Window.css
+++ b/media/admin/css/ka/Window.css
@@ -220,7 +220,7 @@
 
 /* make line-height working even if there are only block-inline events. */
 .kwindow-win-buttonBar::before {
-    content: "";
+    content: "\a0";
 }
 
 
